--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -25,16 +25,27 @@
     </van-col>
   </van-row>
   </view>
+  
     <scroll-view scroll-y="true" class="list" scroll-y="{{true}}">
         <!-- <view class="item" wx:for="{{list}}">第{{index+1}}个{{item}} </view> -->
         <view wx:for="{{list}}">
         <van-image
           width="390"
-          height="250"
+          height="280"
           fit="widthFix"
           lazy-load
           src="{{item}}"
+          bind:touchstart="onClickHouse"
         />
+        <van-cell-group inset>
+        <van-row>
+        <van-col span="12">
+          <van-cell title="Location" label="Madrid, Spain" border="{{ false }}" /></van-col>
+        <van-col span="12">
+          <van-cell title="Time Avaliable" label="Feb, March" border="{{ false }}" /></van-col>
+        </van-row>
+</van-cell-group>
+
       </view>
     </scroll-view>
 
