--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -39,9 +39,9 @@
     </scroll-view>
 
   <van-tabbar active="{{ active }}" bind:change="onChange">
-  <van-tabbar-item icon="home-o">Home</van-tabbar-item>
-  <van-tabbar-item icon="search" size="100px" >Post</van-tabbar-item>
-  <van-tabbar-item icon="friends-o">Profile</van-tabbar-item>
+  <van-tabbar-item icon="home-o" bind:click="onGoHome">Home</van-tabbar-item>
+  <van-tabbar-item icon="search" size="100px" bind:click="onGoPost">Post</van-tabbar-item>
+  <van-tabbar-item icon="friends-o" bind:click="onGoProfile">Profile</van-tabbar-item>
 </van-tabbar>
 </view>
 
