--- a/pages/post/post.wxss
+++ b/pages/post/post.wxss
@@ -11,8 +11,9 @@
   border-right: rgb(197, 204, 243) !important;
   /* margin-right: 10px !important; */
   align-items: center !important;
+  margin-top: 2px !important;
   /* width:80% !important; */
-  height:60px !important;
+  height:45px !important;
   color: rgb(67, 91, 112) !important;
   border-color: rgb(87, 101, 158) !important;
   border: solid 1.5px #422547 !important;
@@ -64,4 +65,44 @@
   justify-content: center;  
   text-align: center;
   /* overflow: hidden; */
+}
+.searchitemtype{
+  /* margin-left: 10px !important; */
+  border-left:rgb(238, 210, 215) !important;
+  border-right: rgb(197, 204, 243) !important;
+  /* margin-right: 10px !important; */
+  align-items: center !important;
+  margin-top: 10px !important;
+  /* width:80% !important; */
+  height:60px !important;
+  /* width: 93% !important; */
+  color: rgb(67, 91, 112) !important;
+  /* border-color: rgb(255, 255, 255) !important;
+  border: solid 1.5px #422547 !important;
+  border-radius: 6px 6px 6px 6px !important; */
+  font-size: 24px !important;
+  /* overflow:hidden; */
+  justify-content: center !important;  
+  text-align: center !important;
+}
+
+.searchitemdes{
+  /* margin-left: 10px !important; */
+  border-left:rgb(238, 210, 215) !important;
+  border-right: rgb(197, 204, 243) !important;
+  /* margin-right: 10px !important; */
+  /* border-top: 10px !important; */
+  align-items: center !important;
+  margin-top: 6px !important;
+  /* width:80% !important; */
+  /* height:45px !important; */
+  min-height: 45px !important;
+  color: rgb(67, 91, 112) !important;
+  border-color: rgb(87, 101, 158) !important;
+  border: solid 1.5px #422547 !important;
+  border-radius: 6px 6px 6px 6px !important;
+  font-size: 24px !important;
+  /* overflow:hidden; */
+  justify-content: center !important;  
+  text-align: center !important;
 }
