--- a/pages/user/index.wxml
+++ b/pages/user/index.wxml
@@ -1,31 +1,24 @@
 <view>
-  <image class="user-poster" src="{{ 'https://img.yzcdn.cn/public_files/2017/10/23/8690bb321356070e0b8c4404d087f8fd.png' }}"></image>
   <van-row class="user-links">
-    <van-col span="6">
-      <van-icon name="pending-payment" />
-      待付款
+    <van-col span="30">
+      <van-image
+        width="10rem"
+        height="10rem"
+        round
+        src="https://img.yzcdn.cn/vant/cat.jpeg"
+      />
     </van-col>
     <van-col span="6">
       <van-icon name="records" />
-      待接单
+      ID
     </van-col>
-    <van-col span="6">
-      <van-icon name="tosend" />
-      待发货
-    </van-col>
-    <van-col span="6">
-      <van-icon name="logistics" />
-      已发货
-    </van-col>
+
+
+
   </van-row>
 
-  <van-cell-group class="user-group">
-    <van-cell icon="records" title="全部订单" is-link />
-  </van-cell-group>
+  <!-- <van-icon name="records" class="user-links
+      个人介绍 -->
 
-  <van-cell-group>
-    <van-cell icon="points" title="我的积分" is-link />
-    <van-cell icon="gold-coin-o" title="我的优惠券" is-link />
-    <van-cell icon="gift-o" title="我收到的礼物" is-link />
-  </van-cell-group>
+
 </view>
