--- a/pages/search/search.wxml
+++ b/pages/search/search.wxml
@@ -68,10 +68,11 @@
     <van-button bind:click="onClickSearch" icon="/icons/loupe.png" size="large" round color='#7232dd' plain>搜索</van-button> 
     </van-col>
   </van-row>
+
   <van-tabbar active="{{ active }}" bind:change="onChange">
-  <van-tabbar-item icon="home-o">Home</van-tabbar-item>
-  <van-tabbar-item icon="search" size="100px" >Post</van-tabbar-item>
-  <van-tabbar-item icon="friends-o">Profile</van-tabbar-item>
+  <van-tabbar-item icon="home-o" bind:click="onGoHome">Home</van-tabbar-item>
+  <van-tabbar-item icon="search" size="100px" bind:click="onGoPost">Post</van-tabbar-item>
+  <van-tabbar-item icon="friends-o" bind:click="onGoProfile">Profile</van-tabbar-item>
 </van-tabbar>
 </view>
 
