--- a/pages/details/details.wxml
+++ b/pages/details/details.wxml
@@ -43,4 +43,10 @@
       bind:click="onClickButton"
     />
 </van-goods-action>
+
+<van-tabbar active="{{ active }}" bind:change="onChange">
+  <van-tabbar-item icon="home-o" bind:click="onGoHome">Home</van-tabbar-item>
+  <van-tabbar-item icon="search" size="100px" bind:click="onGoPost">Post</van-tabbar-item>
+  <van-tabbar-item icon="friends-o" bind:click="onGoProfile">Profile</van-tabbar-item>
+</van-tabbar>
 </view>
