--- a/pages/details/details.wxml
+++ b/pages/details/details.wxml
@@ -3,28 +3,29 @@
     <van-image
       height="280"
       width="100%"
-      src="{{ goods.thumb }}"
+      src="{{detailInfo.picPath}}"
     />
   </view>
   <van-cell-group border="{{ false }}">
     <van-cell
       custom-class="goods-message"
-      title="{{ goods.title }}"
-      label="{{ goods.location}}"
+      title="{{ detailInfo.location }}"
+      label="{{ detailInfo._id}}"
     />
-    <van-cell custom-class="guests">
-      <van-col span="18">{{ goods.guests }}</van-col>
+    <van-cell custom-class="capacityInfo">
+      <van-col span="18">{{ detailInfo.capacity }} guests </van-col>
     </van-cell>
   </van-cell-group>
-  <van-cell class="van-multi-ellipsis--l2" title = "Details" label = "Hi, I'm xxx. This is the house from xxx, which locates in Madrid, Spain. This house has 1 bedroom and can accomendate 2 people. There's 1 private bathroom in the room. Wish you can find a joyful staying here. :)">
+  <van-cell class="van-multi-ellipsis--l2" title = "Details" label = "{{detailInfo.description}}">
   </van-cell>
   <van-cell-group custom-class="goods-cell-group">
-    <van-cell value="Check the time" icon="shop-o" is-link bind:click="sorry">
+    <van-cell value="{{detailInfo.start_date}} - {{detailInfo.end_date}}" icon="shop-o"  bind:click="sorry">
       <view slot="title">
-        <span class="van-cell-text">Time Avaliable</span>
+        <span class="van-cell-text">Time Avalibility</span>
       </view>
     </van-cell>
-    <van-cell title="Owner information" icon="location-o" is-link bind:click="sorry" />
+    <van-cell title="Owner Contact" value="{{detailInfo.contact}}" icon="location-o"  bind:click="sorry" />
+    
   </van-cell-group>
 
   <van-goods-action>
