--- a/pages/user/index.wxml
+++ b/pages/user/index.wxml
@@ -1,24 +1,40 @@
 <view>
-  <van-row class="user-links">
-    <van-col span="30">
+  <van-row class="user-links" gutter = "20">
+    <van-col span="10" offset = "7">
       <van-image
         width="10rem"
         height="10rem"
         round
-        src="https://img.yzcdn.cn/vant/cat.jpeg"
+        src= "/icons/fox.png"
       />
     </van-col>
-    <van-col span="6">
+    <van-col span="10" offset = "7">
       <van-icon name="records" />
-      ID
+      I'm the fox
     </van-col>
-
-
-
   </van-row>
 
-  <!-- <van-icon name="records" class="user-links
-      个人介绍 -->
+  <van-divider />
+  <van-cell class="user-intro" title = "Self Introduction" label = "Hi, I'm xxx. Welcome to my house!"></van-cell>
+  <van-divider />
+<van-row class = "user-house">
+<van-col offset = "1"><van-image
+          width="390"
+          height="280"
+          fit="widthFix"
+          lazy-load
+          src="https://img.yzcdn.cn/vant/cat.jpeg"
+          bind:touchstart="onClickHouse"
+        />
+        </van-col>
+</van-row>
 
+<van-cell class="van-multi-ellipsis--l2" title = "House Description" label = "Hi, I'm xxx. This is the house from xxx, which locates in Madrid, Spain. This house has 1 bedroom and can accomendate 2 people. There's 1 private bathroom in the room. Wish you can find a joyful staying here. :)">
+  </van-cell>
+<van-tabbar active="{{ active }}" bind:change="onChange">
+  <van-tabbar-item icon="home-o" bind:click="onGoHome">Home</van-tabbar-item>
+  <van-tabbar-item icon="search" size="100px" bind:click="onGoPost">Post</van-tabbar-item>
+  <van-tabbar-item icon="friends-o" bind:click="onGoProfile">Profile</van-tabbar-item>
+</van-tabbar>
 
 </view>
