--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,57 +1,64 @@
+<include src="../layout/layout.wxml" />
 <view class="container">
   <view>
     <van-row class="row-display">
-    <van-col offset="1" span="18">
-    <van-button bind:click="onClickSearch" icon="/icons/loupe.png" size="large" round color='#7232dd' plain>搜索</van-button> 
-    </van-col>
-    <van-col offset="1" span="3">
-    <van-button icon="/icons/filter.png" round size="large" color='#7232dd' plain></van-button>
-    </van-col>
+      <van-col offset="1" span="18">
+        <van-button bind:click="onClickSearch" icon="/icons/loupe.png" size="large" round color='#7232dd' plain>搜索</van-button> 
+        </van-col>
+        <van-col offset="1" span="3">
+        <van-button icon="/icons/filter.png" round size="large" color='#7232dd' plain bind:click="onClickFilter"></van-button>
+      </van-col>
     </van-row>
     <van-row class="row-display">
-    <!-- <van-cell value="" size="small"/> -->
-    <van-col offset="1" span="3">
-      <van-button round size="large" color='#7232dd' plain>
-    <van-icon name = "/icons/entertainment.png" size = "40px" ></van-icon></van-button>
-    </van-col>
-    <van-col offset="1" span="3">
-    <van-button round size="large" color='#7232dd' plain>
-    <van-icon name = "/icons/physical-activity.png" size = "40px" ></van-icon>
-    </van-button>
-    </van-col>
-    <van-col offset="1" span="3">
-    <van-button round size="large" color='#7232dd' plain>
-    <van-icon name="/icons/sport.png" size="40px"></van-icon></van-button>
-    </van-col>
-  </van-row>
+    </van-row>
   </view>
-  
-    <scroll-view scroll-y="true" class="list" scroll-y="{{true}}" >
-        <!-- <view class="item" wx:for="{{list}}">第{{index+1}}个{{item}} </view> -->
-        <view wx:for="{{searchRes}}" wx:for-index="bindex" data-bindex='{{bindex}}' bindtap="onClickHouse">
-        <van-image
-          width="390"
-          height="280"
-          fit="widthFix"
-          lazy-load
-          src="{{item.picPath}}"
-        />
-        <van-cell-group inset>
-        <van-row>
-        <van-col span="12">
-          <van-cell title="{{item.location}}" label="{{item.location}}" border="{{ false }}" /></van-col>
-        <van-col span="12">
-          <van-cell title="{{item.start_date}} to {{item.end_date}}" label="Feb, March" border="{{ false }}" /></van-col>
-        </van-row>
+
+  <scroll-view scroll-y="true" class="list" scroll-y="{{true}}" >
+    <view wx:for="{{searchRes}}" wx:for-index="bindex" data-bindex='{{bindex}}' bindtap="onClickHouse">
+      <swiper
+          indicator-dots="true"
+          autoplay="true"
+          interval="true"
+          duration="true"
+          interval="3000"
+          class="swiperHome"> 
+        <view wx:for="{{item.images}}" wx:for-item="images">
+          <swiper-item>
+          <image class="slide-image" src="{{images}}"></image>  
+          </swiper-item> 
+        </view>
+      </swiper>
+    <van-cell-group inset>
+  <van-row>
+    <van-col span="12">
+      <van-cell title="{{item.location}}" label="{{item.location}}" border="{{ false }}" /></van-col>
+    <van-col span="12">
+      <van-cell title="{{item.start_date}} to {{item.end_date}}" label="Feb, March" border="{{ false }}" /></van-col>
+  </van-row>
 </van-cell-group>
 
       </view>
     </scroll-view>
-
-  <van-tabbar active="{{ active }}" bind:change="onChange">
-  <van-tabbar-item icon="home-o" bind:click="onGoHome">Home</van-tabbar-item>
-  <van-tabbar-item icon="search" size="100px" bind:click="onGoPost">Post</van-tabbar-item>
-  <van-tabbar-item icon="friends-o" bind:click="onGoProfile">Profile</van-tabbar-item>
-</van-tabbar>
 </view>
 
+<page-container show="{{show}}" overlay="{{overlay}}" close-on-slide-down duration="{{duration}}" position="{{position}}" >
+  <view class="screen screen2">
+    <view class="contact">
+      <van-grid column-num="4"square>
+        <van-grid-item use-slot wx:for="{{filtering1}}" wx:for-index="bindex" data-bindex='{{bindex}}' wx:for-item="item" bind:click="onClickFilters1">
+          <van-icon name="home-o" color="{{item.selected? '#CCCCCC' : '#676788' }}" />
+          <text class="setting_text">{{item.name}}</text>
+        </van-grid-item>
+        <van-grid-item use-slot wx:for="{{filtering2}}" wx:for-index="bindex" data-bindex='{{bindex}}' wx:for-item="item" bind:click="onClickFilters2">
+          <van-icon name="home-o" color="{{item.selected? '#CCCCCC' : '#676788' }}" />
+          <text class="setting_text">{{item.name}}</text>
+        </van-grid-item>
+        <van-grid-item use-slot wx:for="{{filtering3}}" wx:for-index="bindex" data-bindex='{{bindex}}' wx:for-item="item" bind:click="onClickFilters3">
+          <van-icon name="home-o"  color="{{item.selected? '#CCCCCC' : '#676788' }}" />
+          <text class="setting_text">{{item.name}}</text>
+        </van-grid-item>
+      </van-grid>
+      <button class="screen2-button" bindtap="showPrev" hidden="{{!show}}" hover-class="none">Submit</button>
+    </view>
+  </view>
+</page-container>
