--- a/pages/repost/repost.wxss
+++ b/pages/repost/repost.wxss
@@ -1,80 +1,70 @@
 .row-display {
-  margin-top: 10px;
+  margin-top: 30px;
   text-align: center;
   display: block;
   color: #555;
   margin-bottom: 10px;
 }
+.searchitem{
+  /* margin-left: 10px !important; */
+  /* border-left:rgb(238, 210, 215) !important;
+  border-right: rgb(197, 204, 243) !important; */
+  /* margin-right: 10px !important; */
+  align-items: center !important;
+  /* width:80% !important; */
 
-.container{
+  /* color: rgb(67, 91, 112) !important;
+  border-radius: 6px 6px 6px 6px !important; */
+  font-size: 24px !important;
+  /* overflow:hidden; */
+  justify-content: center !important;  
+  text-align: center !important;
+}
+.list_name{
+  /* position: ; */
+  width: 100%;
+  border-color: rgb(87, 101, 158);
+  border: solid px #422547 !important;
+  /* height: 90rpx;
+  line-height: 90rpx; */
+  border-top: 1rpx solid #ddd;
+  border-bottom: 1rpx solid #ddd;
+  vertical-align: center;
+  justify-content: center; 
+  align-items: center; 
+  text-align: center;
+}
+/* 列表名称 */
+.lab_name{
+  margin-left: 10px;
+  margin-right: 10px;
+  /* position: absolute; */
+  position: relative;
+  left: 30rpx;
+  height: 90rpx;
+  line-height: 90rpx;
+  text-align: center;
+  vertical-align: center;
+  justify-content: center; 
+  align-items: center; 
+}
+ 
+/* 结果框样式 */
+.msg-item {
+  width: 100%;
+  height: 90rpx;
+  border-bottom: 1rpx solid rgb(233, 233, 233);
+  position: relative;
+  left:0;
+  top:0;
   align-items: center;
-  width:100%;
-  height:100%;
-  overflow:hidden;
+  vertical-align: center;
   justify-content: center;  
-  text-align: center；
-}
-
-.line{
-  width:100%;
-  height:20%;
-  align-items: center;
-}
-
-.list{
-  height:1050rpx;
-  width:100%;
-  align-items: center;
-  overflow-y:scroll;
-  text-align:center;
-
-}
-
-.list .item{
-  height:300rpx;
-  width:100%;
-  align-items: center;
-  align-self: center;
   text-align: center;
-  line-height:300rpx;
+  /* overflow: hidden; */
 }
 
-.list .item:nth-child(even){
-  align-items: center;
-  background: skyblue;
-}
-
-.list .item:nth-child(odd){
-  align-items: center;
-  background: pink;
-}
-
-.itemsw{
-  text-align: center;
-}
-
-.listcss{
-  align-items: center;
-  height:40%;
-  width:100%;
-  overflow-y:scroll;
-}
-
-.listcss .item{
-  align-items: center;
-  height:300rpx;
-  width:100%;
-  text-align: center;
-  line-height:300rpx;
-}
-
-.listcss .item:nth-child(even){
-  background: skyblue;
-}
-
-.listcss .item:nth-child(odd){
-  background: pink;
-}
+/* pages/jsCase/pageCon/index.wxss */
 page {
   color           : #333;
   background-color: #fff;
@@ -146,12 +136,16 @@ button {
   margin     : 10px 0;
 }
 
-.postlist {
+.list {
   padding-top : 8px;
   padding-left: 32px;
 }
 
 .screen1 {
+  overflow-y: scroll;
+  padding   : 0;
+}
+.scrolly {
   overflow-y: scroll;
   padding   : 0;
 }
@@ -200,11 +194,11 @@ button {
 }
 
 .typeInfo {
-  height     : 34px;
-  font-size  : 20px;
+  height     : 30px;
+  font-size  : 18px;
   font-weight: bold;
   text-align : center;
-  margin     : 8px 0;
+  margin     : 2px 0;
   align-items: center;
   vertical-align: center;
   justify-content: center;  
@@ -220,11 +214,52 @@ button {
   font-size: 12px;
 }
 
-.swiperHome {
-  height: 230px;
-  width: 100%;
+.searchitemdes{
+  /* margin-left: 10px !important; */
+  border-left:rgb(238, 210, 215) !important;
+  border-right: rgb(197, 204, 243) !important;
+  /* margin-right: 10px !important; */
+  /* border-top: 10px !important; */
+  align-items: center !important;
+  margin-top: 6px !important;
+  /* width:80% !important; */
+  /* height:45px !important; */
+  min-height: 45px !important;
+  color: rgb(67, 91, 112) !important;
+  border-radius: 6px 6px 6px 6px !important;
+  font-size: 24px !important;
+  /* overflow:hidden; */
+  justify-content: center !important;  
+  text-align: center !important;
 }
- 
-.slide-image {
-	width: 100%;
+
+.multipleImg {
+  width: 100%;
+  display: flex;
+  flex-flow: row wrap;
+}
+
+.upload {
+  position: relative;
+}
+
+.addImg {
+  width: 158rpx;
+  height: 158rpx;
+  margin: 50rpx 20rpx 30rpx 0;
+}
+
+.deleteImg {
+  width: 50rpx;
+  height: 50rpx;
+  position: absolute;
+  top: 25rpx;
+  right: 0;
+}
+
+.submit-button {
+  display: block;
+  margin : 24px auto;
+  color: beige !important;
+  background-color: rgb(224, 209, 178);
 }
